# nebulawar

./: .gitignore  Cargo.toml  Makefile  build.rs  fighter.blend  game.sav  ideas.md  todo.md
models/: fighter.mtl  tanker.blend  tanker.blend1
pedot/: Cargo.toml
pedot/src/: alignment.rs  lib.rs
resources/explosion/: explosion.ase
resources/models/: asteroid.mtl  carrier.mtl  fighter.mtl  miner.mtl  missile.mtl  skybox.mtl  tanker.mtl
resources/sources/: asteroid.xcf  carrier.blend  carrier.xcf  fighter.blend  miner.blend  missile.blend  scene.blend  tanker.aseprite
runic/: Cargo.toml
runic/examples/: fancy.frag  fancy.rs  pixelated.rs  simple.rs
runic/src/: cache.rs  lib.rs  tests.rs
runic/src/shaders/: shader.frag  shader.vert
src/: camera.rs  common_components.rs  components.rs  context.rs  controls.rs  entities.rs  lines.frag  lines.rs  main.rs  maps.rs  people.rs  resources.rs  shader.vert  ships.rs  star_system.rs  state.rs  tests.rs  ui.rs  util.rs
src/context/: lines.rs  mod.rs  resources.rs
src/context/shaders/: lines.frag  lines.frag.spv  lines.vert  lines.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/shaders/: lines.vert  shader.frag
src/ships/: components.rs  formations.rs  mod.rs  storage.rs
src/state/: mod.rs  system.rs
src/systems/: combat.rs  mod.rs  rendering.rs  saving.rs  setup.rs  steering.rs  storage.rs
wasm/: build.sh  index.html
