[package]
name = "fleet_commander"
version = "0.1.0"
authors = ["Expenses <expenses@airmail.cc>"]
description = "A game"

[dependencies]
# OpenGL
glium = "*"
# model/uv loading
obj = {version = "*", features = ["genmesh"]}
genmesh = "*"
# image loading (we only need pngs)
image = {version = "*", default-features = false, features = ["png_codec"]}
# Useful wrapper around arrays
arrayvec = "*"
# Easier matrices stuff
cgmath = "*"
# collision detection extension for cgmath
collision = "*"
# 2d ui rendering (circles etc)
lyon = "*"
# text rendering (waiting on: me being lazy)
runic = {git = "https://github.com/expenses/runic"}
# lazy derive
derive_is_enum_variant = "*"
# Randomness
rand = "0.5"
# Serialization
serde = "*"
serde_derive = "*"
bincode = "*"
# UI (waiting on: me adding features)
pedot = {git = "https://github.com/expenses/pedot"}
# error handling
failure = "*"
# logging (dont need extra stuff)
env_logger = {version = "*", default-features = false}
log = "*"
# 'retain_mut'
odds = {version = "*", features = ["std-vec"]}
# ECS (waiting on: saveload stuff)
specs = {git = "https://github.com/expenses/specs", features = ["serde"], branch="better_entity_serialization_errors"}
specs-derive = {git = "https://github.com/expenses/specs", branch="better_entity_serialization_errors"}

# Triangulation
spade = "*"
# Noise (waiting on: image being optional)
noise = {git = "https://github.com/Razaekel/noise-rs", branch = "develop", default-features = false}
# easier newtype structs (waiting on: deref mut)
newtype-proxy = {git = "https://github.com/expenses/newtype-proxy", branch = "deref_mut"}
# HSV
tint = "*"

# Incase I need to debug an uninitialized component
shred = {version = "*", features = ["nightly"], optional = true}

[features]
default = ['embed_resources']

embed_resources = []

[package.metadata.bundle]
name = "Fleet Commander"
identifier = "io.github.expenses.fleet_commander"
icon = ["resources/ui/mine.png"]