[package]
name = "fleet_commander"
version = "0.1.0"
authors = ["Expenses <expenses@airmail.cc>"]
description = "A game"
edition = "2018"

[dependencies]
# model/uv loading
obj = { version = "0.10.0", features = ["genmesh"] }
genmesh = "0.6.2"
# image loading (we only need pngs)
image = { version = "0.23.4", default-features = false, features = ["png"] }
# Useful wrapper around arrays
arrayvec = "0.5.1"
# Easier matrices stuff
cgmath = "0.17.0"
# collision detection extension for cgmath
#collision = {git = "https://github.com/expenses/collision-rs", branch = "public-simplex-processors"}
collision = "0.20.1"
# 2d ui rendering (circles etc)
lyon = "0.15.8"
# text rendering (waiting on: me being lazy)
#runic = { path = "runic" }
# lazy derive
derive_is_enum_variant = "0.1.1"
# Randomness
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
# Serialization
serde = "1.0.110"
serde_derive = "1.0.110"
bincode = "1.2.1"
# UI (waiting on: me adding features)
pedot = { path = "pedot" }
# error handling
failure = "0.1.8"
# logging (dont need extra stuff)
env_logger = { version = "0.7.1", default-features = false }
log = "0.4.8"
# 'retain_mut'
odds = { version = "0.4.0", features = ["std-vec"] }
# ECS (waiting on: saveload stuff)
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"

# Triangulation
spade = "1.8.2"
# Noise (waiting on: image being optional)
noise = "0.6.0"
# easier newtype structs (waiting on: deref mut)
newtype-proxy = {git = "https://github.com/expenses/newtype-proxy", branch = "deref_mut"}
# HSV
tint = "1.0.1"

nalgebra = "0.21.0"
ncollide3d = "0.23.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
winit = "0.22.2"
futures = "0.3.5"
zerocopy = "0.3.0"
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"
web-sys = "0.3.39"
wasm-bindgen-futures = "0.4.12"
wasm-timer = "0.2.4"
js-sys = "0.3.39"
wgpu_glyph = { git = "https://github.com/expenses/wgpu_glyph", branch = "experimental" }

[features]
default = ['embed_resources', "native"]
native = []
wasm = ["winit/web-sys"]

embed_resources = []

[package.metadata.bundle]
name = "Fleet Commander"
identifier = "io.github.expenses.fleet_commander"
icon = ["resources/ui/mine.png"]

[build-dependencies]
texture_packer = "0.21.1"
image = { version = "0.23.4", default-features = false, features = ["png"] }
codegen = { git = "https://github.com/carllerche/codegen" }
